Map is showing TODO: BL from Server
Co-authored-by: Grossdrache <philipp@tull.de>
Co-authored-by: Simon <sito.prvt@t-online.de>

--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "Webanwendungen rules",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "node server.js",
-    "start": "node server.js",
-    "main": "node main.js"
+    "start": "node server.js"
   },
   "keywords": [
     "server"
